2010-05-07  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/gsad.c (init_validator): Allow "@" and "." characters in LSC
	login. Allow "@" character in LSC password.

2010-05-06  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl, src/html/oap.xsl: Convert tabs to spaces.

2010-05-06  Matthew Mundell <matthew.mundell@greenbone.net>

	Make saving of file preferences conditional on a checkbox.

	* src/html/omp.xsl (edit-config-preference): Add checkbox to "file"
	preferences so that saving the file is optional.

	* src/gsad_omp.c (save_config_nvt_omp): Add files arg which lists files
	that must be updated.

	* src/gsad_omp.h: Update header accordingly.

	* src/gsad.c (req_parms): Add files array.
	(free_resources): Free files.
	(serve_post): Collect files.
	(exec_omp_post): Pass files to save_config_nvt_omp.

2010-05-06  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (preference [details]): Print "File attached."
	instead of the contents of file preferences.

2010-05-06  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (preference [preference]): Print "File attached."
	instead of the contents of file preferences.

2010-05-06  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-create-escalator-form): Add "threat level
	changed" condition.
	(escalator, escalator [details]): Add "threat level changed" handling.

2010-05-02  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/src/: Finally remove empty directory.

2010-05-02  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Move up the html files on directory in order to eliminate
	the unnecessary additional directory "src".

	* src/html/src/favicon.gif, src/html/src/gsad.xsl,
	src/html/src/gsa-style.css, src/html/src/help.xsl,
	src/html/src/IE6fixes.css, src/html/src/img,
	src/html/src/login, src/html/src/oap.xsl, src/html/src/omp.xsl:
	Moved to src/html/.

	* src/CMakeLists.txt: Adjusted paths.
