@@ -122,44 +122,44 @@ endif (NOT LIBS_FOUND OR NOT GSAD_LIBS_FOUND OR NOT LIBOPENVAS_SUFFICIENT)
 #  Not using Subversion_WC_INFO, as it would have to connect to the repo
 FIND_PROGRAM(SVN_EXECUTABLE svn DOC "subversion command line client")
 
-MACRO(Subversion_GET_REVISION dir variable)
-  EXECUTE_PROCESS(COMMAND ${SVN_EXECUTABLE} info ${CMAKE_SOURCE_DIR}/${dir}
+macro (Subversion_GET_REVISION dir variable)
+  execute_process (COMMAND ${SVN_EXECUTABLE} info ${CMAKE_SOURCE_DIR}/${dir}
     OUTPUT_VARIABLE ${variable}
     OUTPUT_STRIP_TRAILING_WHITESPACE)
-  STRING(REGEX REPLACE "^(.*\n)?Revision: ([^\n]+).*"
+  string (REGEX REPLACE "^(.*\n)?Revision: ([^\n]+).*"
     "\\2" ${variable} "${${variable}}")
-ENDMACRO(Subversion_GET_REVISION)
+endmacro (Subversion_GET_REVISION)
 
-IF(NOT PREPARE_RELEASE)
-  IF(SVN_EXECUTABLE)
+if (NOT PREPARE_RELEASE)
+  if (SVN_EXECUTABLE)
     Subversion_GET_REVISION(. ProjectRevision)
-    SET (SVN_REVISION ".SVN.r${ProjectRevision}")
-  ELSE(SVN_EXECUTABLE)
-    SET (SVN_REVISION ".SVN")
-  ENDIF(SVN_EXECUTABLE)
-ENDIF(NOT PREPARE_RELEASE)
+    set (SVN_REVISION ".SVN.r${ProjectRevision}")
+  else (SVN_EXECUTABLE)
+    set (SVN_REVISION ".SVN")
+  endif (SVN_EXECUTABLE)
+endif (NOT PREPARE_RELEASE)
 
 ## CPack configuration
 
-SET(CPACK_CMAKE_GENERATOR "Unix Makefiles")
-SET(CPACK_GENERATOR "TGZ")
-SET(CPACK_INSTALL_CMAKE_PROJECTS ".;greenbone-security-assistant;ALL;/")
-SET(CPACK_MODULE_PATH "")
-SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/COPYING")
-SET(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README")
-SET(CPACK_RESOURCE_FILE_WELCOME "${CMAKE_SOURCE_DIR}/README")
-SET(CPACK_SOURCE_GENERATOR "TGZ")
-SET(CPACK_SOURCE_TOPLEVEL_TAG "")
-SET(CPACK_SYSTEM_NAME "")
-SET(CPACK_TOPLEVEL_TAG "")
-SET(CPACK_PACKAGE_VERSION_MAJOR "1")
-SET(CPACK_PACKAGE_VERSION_MINOR "0")
-SET(CPACK_PACKAGE_VERSION_PATCH "0-beta7${SVN_REVISION}")
-SET(CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
-SET(CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${CPACK_PACKAGE_VERSION}")
-SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${PROJECT_NAME}-${CPACK_PACKAGE_VERSION}")
-SET(CPACK_PACKAGE_VENDOR "The OpenVAS Project")
-SET(CPACK_SOURCE_IGNORE_FILES
+set (CPACK_CMAKE_GENERATOR "Unix Makefiles")
+set (CPACK_GENERATOR "TGZ")
+set (CPACK_INSTALL_CMAKE_PROJECTS ".;greenbone-security-assistant;ALL;/")
+set (CPACK_MODULE_PATH "")
+set (CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/COPYING")
+set (CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README")
+set (CPACK_RESOURCE_FILE_WELCOME "${CMAKE_SOURCE_DIR}/README")
+set (CPACK_SOURCE_GENERATOR "TGZ")
+set (CPACK_SOURCE_TOPLEVEL_TAG "")
+set (CPACK_SYSTEM_NAME "")
+set (CPACK_TOPLEVEL_TAG "")
+set (CPACK_PACKAGE_VERSION_MAJOR "1")
+set (CPACK_PACKAGE_VERSION_MINOR "0")
+set (CPACK_PACKAGE_VERSION_PATCH "0-beta7${SVN_REVISION}")
+set (CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
+set (CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${CPACK_PACKAGE_VERSION}")
+set (CPACK_SOURCE_PACKAGE_FILE_NAME "${PROJECT_NAME}-${CPACK_PACKAGE_VERSION}")
+set (CPACK_PACKAGE_VENDOR "The OpenVAS Project")
+set (CPACK_SOURCE_IGNORE_FILES
 "/.svn/"
 "/_CPack_Packages/"
 "/CMakeFiles/"
@@ -181,7 +181,7 @@ SET(CPACK_SOURCE_IGNORE_FILES
 "VERSION$"
 )
 
-INCLUDE(CPack)
+include (CPack)
 
 ## Variables
 
